[package]
name = "colorsmash"
version = "0.1.0"
authors = ["Bryan Ngo <bngo@linkedin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.2", features = [ "js" ] }
rand = "0.8.3"
wasm-bindgen = "0.2.71"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'HtmlButtonElement',
]
